--- a/Client/package.json
+++ b/Client/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
+    "ng2-search-filter": "^0.5.1",
     "npm": "^6.13.1",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
